--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -45,6 +45,6 @@
     margin: 50px auto;
     }
     .searchinputs{
-        margin: 200px auto auto auto;
+        margin: 175px auto auto auto;
     }
 }
